<resources>
    <string name="app_name">(c)ync</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="eventName">Event</string>

    <string name="lipsum_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam cursus sem et ante rhoncus pharetra. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur lacinia mattis quam, non laoreet felis vestibulum ac. Curabitur pharetra vel est quis cursus. Etiam faucibus turpis in nunc semper sollicitudin. Nam fermentum commodo ligula. Aliquam a tellus sollicitudin, ultricies est ac, porta ante. Nam aliquet mi nulla, ut laoreet nunc vestibulum ut. Quisque non purus urna. Aliquam sed porta lectus. In a ipsum varius, imperdiet magna in, hendrerit arcu. Donec porta, nulla non viverra sollicitudin, nisl mi suscipit nisl, nec pellentesque est mi ut neque. Duis viverra laoreet nibh at malesuada.</string>
    <string name="sticky_header">Sticky</string>

    <!--Code strings-->
    <string name="code_venue">Senior Computer Lab(Junior College)</string>
    <string name="code_time">10:00 AM</string>
    <string name="code_elg">10th+</string>
    <string name="code_desc">Most software today are very much identical to an Egyptian pyramid with millions of bricks piled on top of each other, with no structural integrity, but just done by brute force and thousands of slaves, and this calls for a need for better code. This competition will test the programming skills of the participants by giving them a task and the tools to make a program accurately and ef?ciently.</string>
    <string name="code_rules">1. Turbo C++ and Java NetBeans will be provided; no other IDE or use of another programming language would be permitted. \r\n
2. After 30 mins, the participant who solved maximum no. of tasks or all the tasks in least amount of time would be declared as winner. \r\n
3. There would be no limit for attempting, participants can attempt same question as many times they want. \r\n
4. Participants will have to use the PCs provided, use of personal computer/equipment will not be permitted.</string>

    <!--Respawn strings-->
    <string name="resp_venue">Senior Computer Lab(Quadrangle)</string>
    <string name="resp_time">10:00 AM</string>
    <string name="resp_elg">10th+</string>
    <string name="resp_desc">Games give you a chance to excel, and if you are playing in good company you don not even mind if you lose because you had the enjoyment of the company during the course of the game. This event will be team based and will require co-operation between the team members and necessary skills to win the competition. Teams representing their schools will go 1 on 1 each other in elimination matches. Team winning the ?nal match will be declared as the winner.</string>
    <string name="resp_rules">1. Participants will be playing Counter Strike 1.6, a first person shooter supposed to be played in teams.\r\n
2. There will be various elimination rounds depending on the no. of participating teams leading to 1 winning team.\r\n
3. Participant will have to use the PCs provided, use of personal computers would not be permitted.\r\n
4. Participants can bring their personal mouse, keyboard and headset, any accessory/equipment other than mentioned above would not be permitted.\r\n
5. One match against two teams will consist of 3 rounds, out of which the team winning more rounds will be considered as the winner.</string>

    <!--Click strings-->
    <string name="click_venue">Amphitheatre</string>
    <string name="click_time">10:00 AM</string>
    <string name="click_elg">10th+</string>
    <string name="click_desc">Photography is about finding out what can happen in the frame, when you put four edges around some facts, you change those facts. Participants skilled in photography will go through these tasks which will test their skills in all situations for getting the best photo at the best timings. A topic will be given to the participants on the spot (eg. Unity in Diversity) and will be allowed to roam in the school campus, showing their skills by bringing the best photo possible.</string>
    <string name="click_rules">1. Participants to bring their own cameras, accessories and equipments such as data cable, memory cards, memory card reader etc. No accessory/equipment would be provided by us.\r\n
2. Only the students having a professional camera (DSLR/Mirrorless) would be allowed to participate for fair participation.\r\n
3. Time of 2 hours will be given to the participants for clicking their photos in the campus (school map would be provided). Extra 30 minutes will be provided for viewing and editing their photos.\r\n
4. Participants would be required to submit RAW file as well as the edited JPG files when submitting their final photos.</string>

    <!--Creation strings-->
    <string name="create_venue">Junior Computer Lab</string>
    <string name="create_time">10:00 AM</string>
    <string name="create_elg">10th+</string>
    <string name="create_desc">The life of a designer is a life of fights. Fight against the ugly pixels. Just like a doctor fights against disease. For them, the visual disease is what they have around, and what they try to do is cure the pixels with their designing. The participants will be assigned a company whose identity will have to be created digitally using digital graphing softwares.</string>
    <string name="create_rules">1. Adobe Photoshop(CC), CorelDRAW(X7) and Adobe Illustrator(CC) will be provided, use of another software would not be permitted.\r\n
2. Participant will have to use the PCs provided, use of personal computer/ equipment will not be permitted.\r\n
3. Participants would be required to submit editable base files(Eg. PSD) as well as the final JPG files when submitting their final creations.</string>

    <!--CryptCross strings-->
    <string name="cc_venue">A.V. Room</string>
    <string name="cc_time">10:00 AM</string>
    <string name="cc_elg">10th+</string>
    <string name="cc_desc">Cryptic crossword puzzles come in two main types: the basic cryptic in which each answer is entered into the diagram normally, and the advanced or "variety" cryptic, in which some or all of the answers must be altered before entering, usually in accordance with a hidden pattern or rule which must be discovered by the participant. Cryptic questions will require only the knowledge of language and the own wit of participant and presence of mind.</string>
    <string name="cc_rules">1. Problems to be solved in the stipulated time limit only.\r\n
2. Causing disruption to other teams will not be tolerated.</string>

    <!--Cynth strings-->
    <string name="cynth_venue">Middle Computer Lab</string>
    <string name="cynth_time">10:00 AM</string>
    <string name="cynth_elg">9th-10th/11th-12th</string>
    <string name="cynth_desc">TElectronic music uses pure sounds, completely calibrated. You have to think digitally, as it were, in a way that allowed you to extend serial ideas into other parameters through technology. Participants will be required to create pieces of music on the spot using an audio editing software in the EDM (Electronic Dance Music) umbrella of a wide range of genres ranging from house to trap. They will be provided with a sound generating application, whose sounds they can record via another application provided by us, which then has to be made in a complete song.</string>
    <string name="cynth_rules">1. The participants would be given around 6-8 melodies in basic MIDI (Musical Instrument Digital Interface) format. They have to choose any one of them.\r\n
2. The melodies provided would be 3 – 9 measures (8 beats – 32 beats) long.\r\n
3. The participants can change the tempo according to the track they are making.\r\n
4. The melody chosen can be modified, but the actual composition should remain the same.\r\n
5. Participants can use the provided VSTs to make the melody sound good.\r\n
6. VST’s provided will be the stock ones + some useful ones like Nexus 2, Sylenth2.\r\n
7. The participants can make use of Hardware (MIDI Input devices) Devices according to their requirements.\r\n
8. The created track should be of time frame of minimum 100s (1 min 40s) and maximum 180s (3 mins).\r\n
9. Use of premade loops provided in the software, or brought from external sources if caught, will result in immediate disqualification of the team.\r\n
10. At the end of the event, the participants have to save their .flp files and also render the track mp3 in 320kbps. The file names should be in the following manner-\r\n
   a. Begin with the team name and class and then the melody number which they have used in their    track.\r\n
   b. for example: - if the team is from DPS Bhopal and used the melody number 4 , they files names  should be as such – DpsTeam4.Flp and DpsTeam4.Mp3\r\n
11.  If the judges, volunteers, Event coordinators find the teams using any wrong means and / or violating any of the above rules will be disqualified immediately.\r\n
12.  The event will have a limited time of 2 hours, under which the teams have to choose the melody to their liking and convert it into a track. After the timer ends, the teams have to STOP making their track and immediately start exporting and saving their files.\r\n
13. The track made by the teams can be any type of Electronic music track namely, house, progressive house, trap, electro house etc.\r\n
14. The tracks will be judged on the basis of innovation, sounds, and effects used in its making. The judges will give separate points on these and several other bases like originality, software knowledge etc.\r\n
15. After the judgment, the winners selected to be the 1st and 2nd will be given their respective prizes.\r\n
16. The winners announcement will take place altogether after the events in the school auditorium.</string>

    <!--Decypher strings-->
    <string name="dec_venue">Online</string>
    <string name="dec_time">24th July 6:00PM IST</string>
    <string name="dec_elg">No criteria</string>
    <string name="dec_desc">The competition will be conducted online on our website -(http:// cync.clubcypher.com/decypher). Students can register on the website provided or through our online portal for teachers. In online cryptic hunt the individuals will be solving cryptic and logical questions while competing with others for ranking higher. Players will be ranked on the basis of points they gain by answering the questions fast and using s as less clue as possible (using a clue for any level will deduct their points which will depend on the checkpoint the level is). Levels will be divided in checkpoints of equal difficulty and the questions will be shuffied randomly from person to person which will reduce cheating and unfair means.</string>
    <string name="dec_rules">Available on the website.</string>

</resources>
